--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mjahmadee-portfolio",
+  "name": "Mehran Tamjidi-portfolio",
   "version": "1.0.0",
   "private": true,
   "scripts": {
